--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "he": "^1.2.0",
     "http-status-codes": "^2.3.0",
     "immer": "^11.0.1",
+    "lucide-react": "^0.555.0",
     "luxon": "^3.7.2",
     "next": "16.0.5",
     "react": "19.2.0",
