--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mantine/core": "^8.3.9",
     "@mantine/hooks": "^8.3.9",
     "@mantine/notifications": "^8.3.9",
+    "@tabler/icons-react": "^3.35.0",
     "@tanstack/react-query": "^5.90.11",
     "@thoughtspot/rest-api-sdk": "^2.20.0",
     "@thoughtspot/visual-embed-sdk": "^1.43.1",
